--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,10 @@
       "@/*": ["./src/*"]
     }
   },
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
