--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    "react/no-unescaped-entities": 0
+    "react/no-unescaped-entities": 0,
+    "@typescript-eslint/no-explicit-any": ["off"]
 },
   "compilerOptions": {
     "target": "es5",
