--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "rules": {
     "react/no-unescaped-entities": 0,
-    "@typescript-eslint/no-explicit-any": ["off"]
+    "@typescript-eslint/no-explicit-any": "warn"
 },
   "compilerOptions": {
     "target": "es5",
