--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/components/our-brands/our-brands.jsx"  ],
   "exclude": [
     "node_modules"
   ]
