--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "next": "15.1.1",
     "qs": "^6.13.1",
