--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "src/components/our-brands/our-brands.jsx", "src/components/hero/main.jsx", "src/components/certifications-and-memberships/CertificationsAndMemberships.jsx", "src/components/certification/Title.jsx", "src/components/Cards/Cards.jsx", "src/app/page.jsx", "src/components/footer/footer.jsx"  ],
+, "src/components/our-brands/our-brands.jsx", "src/components/hero/main.jsx", "src/components/certifications-and-memberships/CertificationsAndMemberships.jsx", "src/components/certification/Title.jsx", "src/components/Cards/Cards.jsx", "src/app/page.jsx", "src/components/footer/footer.jsx", "src/config/Axios.js", "src/app/products/page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
