--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^9.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
