--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "next": "15.1.1",
     "qs": "^6.13.1",
