--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
     "qs": "^6.13.1",
@@ -20,6 +22,7 @@
     "react-leaflet": "^5.0.0",
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.3",
+    "react-sticky": "^6.0.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
