--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
