--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@gsap/react": "^2.1.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
@@ -24,7 +26,8 @@
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.3",
     "react-sticky": "^6.0.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
