--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
+    "nodemailer": "^6.9.16",
     "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
