--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.3",
     "react-sticky": "^6.0.3",
+    "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
     "xlsx": "^0.18.5"
   },
