--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@portabletext/react": "^3.2.0",
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
